--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         rel="stylesheet"
         />
         <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/tablets.css">
         <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 1024px)"
         />
     </head>
